# 42_ready_set_boole

./: Cargo.toml  README.md
src/: adder.rs  grey_code.rs  lib.rs  multiplier.rs
